2015-12-04  Andreas Tobler  <andreast@gcc.gnu.org>

	Backport from mainline
	2015-12-01  Andreas Tobler  <andreast@gcc.gnu.org>

	* config/rs6000/freebsd64.h (ELFv2_ABI_CHECK): Add new macro.
	(SUBSUBTARGET_OVERRIDE_OPTIONS): Use it to decide whether to set
	rs6000_current_abi to ABI_AIX or ABI_ELFv2.

2015-12-04  Richard Biener  <rguenther@suse.de>

	* BASE-VER: Set to 5.3.1.

2015-12-04  Release Manager

	* GCC 5.3.0 released.

2015-11-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* config/i386/freebsd.h (SUBTARGET32_DEFAULT_CPU): Change to i586.
	Remove support for FreeBSD 5 and earlier.

2015-11-27  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/68552
	* optabs.c (expand_vec_perm_1): Move vec_shr handling from here...
	(expand_vec_perm): ... here.  Do it regardless of vec_perm_const_optab
	or whether v0 == v1.

2015-11-26  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	Backport from mainline
	2015-09-30  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR rtl-optimization/67037    
	* lra-constraints.c (process_addr_reg): Use copy_rtx when necessary.

2015-11-26  David Edelsohn  <dje.gcc@gmail.com>

	Backport from mainline
	2015-11-25  David Edelsohn  <dje.gcc@gmail.com>

	* config/rs6000/rs6000.c (rs6000_declare_alias): Rename and globalize
	both the symbol and the "dot" symbol for function descriptors. Fix
	inversion for rename of symbols with dollar sign.

2015-11-26  Ilya Enkovich  <enkovich.gnu@gmail.com>

	Backport from mainline r230938.
	2015-11-26  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/68416
	* config/i386/i386.h (enum reg_class): Add
	bounds registers to ALL_REGS.

2015-11-26  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	Backport from mainline
	2015-11-26  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
	            Bernd Schmidt  <bschmidt@redhat.com>

	PR rtl-optimization/67226
	* calls.c (store_one_arg): Take into account
	crtl->args.pretend_args_size when checking for overlap between